--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ unit_6/sample.html
 unit_6/images/.DS_Store
 unit_5/images/.DS_Store
 .DS_Store
+*.psd
+unit_final/images/Originals/geography_itms_screen_1.png
+unit_final/images/Originals/Geography_itms_screen_2.png
+unit_final/images/Originals/IMG_0079.jpg
+unit_final/images/Originals/nabi-treasure-box-coins.jpg
